# local-convertor

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  compose.yaml  docker-build-local-converter.sh  main.py  package-lock.json  package.json  pyproject.toml  run_dev.sh  working_protocol.md
app/: __init__.py  config.py
app/converter/: __init__.py  clash.py  errors.py  result.py  subscription.py  utils.py
app/models/: provider.py  settings.py
app/repositories/: provider_repo.py  settings_repo.py
app/routes/: api.py  events.py  subscriptions.py  ui.py
app/services/: fetcher.py  log_sink.py  log_store.py  scheduler.py  updater.py  version_store.py
app/static/: app.css  app.js
app/templates/: index.html
documentation/implemented/: 20260712_doc_converter_usage.md  20260712_doc_protocol_inventory.md  20260712_doc_ui_usage.md  20260712_feat_worker_b_converter_ui.md  20260712_fix_dependency_closure_validation.md  20260712_fix_ui_doc_reconciliation.md  20260712_fix_worker_a_review_findings.md  20260712_fix_worker_b_review_followups.md  20260712_fix_worker_b_second_review.md
documentation/planning/: 20260712_doc_project_plan.md  20260712_doc_shared_contracts.md  20260712_doc_two_worker_checklist.md  20260712_feat_worker_a_complete.md
migrations/versions/: 81a544f7b657_initial_schema_provider_.py  82318fbd2666_add_ua_mode_to_providers.py  e4f2a1c8b3d7_add_app_settings.py
requirements/: 20260712_initial_requirement.md
requirements/planning/: 20260712_analysis_worker_a_review_findings.md  20260713_fix_mieru_encoder.md  (+10 more)
tests/: conftest.py
(+73 files in other folders)
