[project]
name = "local-convertor"
version = "0.1.0"
description = "Local Clash subscription converter for daed consumption"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.1",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "gunicorn>=23.0",
    "blinker>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
